[package]
name = "pushpin"
version = "1.41.0-dev"
authors = ["Justin Karneges <jkarneges@fastly.com>"]
description = "Reverse proxy for realtime web services"
repository = "https://github.com/fastly/pushpin"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
default-run = "pushpin"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
arrayvec = "0.7"
base64 = "0.13"
clap = { version = "=4.2.1", features = ["cargo", "string", "wrap_help", "derive"] }
config = "0.13.3"
httparse = "1.7"
ipnet = "2"
jsonwebtoken = "8"
libc = "0.2"
log = "0.4"
miniz_oxide = "0.6"
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
openssl = "0.10"
paste = "1.0"
rustls = "0.21"
rustls-native-certs = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
signal-hook = "0.3"
slab = "0.4"
socket2 = "0.4"
thiserror = "1.0"
time = { version = "=0.3.18", features = ["formatting", "local-offset", "macros"] }
url = "2.3"
zmq = "0.9"

[dev-dependencies]
criterion = "0.5"
env_logger = { version = "0.9", default-features = false }
test-log = "0.2"

[build-dependencies]
pkg-config = "0.3"
time = { version = "=0.3.18", features = ["formatting", "local-offset", "macros"] }
cbindgen = "0.26"

[[bench]]
name = "server"
harness = false

[[bench]]
name = "client"
harness = false

[[bin]]
name = "pushpin-connmgr"
test = false
bench = false

[[bin]]
name = "m2adapter"
test = false
bench = false

[[bin]]
name = "pushpin-proxy"
test = false
bench = false

[[bin]]
name = "pushpin-handler"
test = false
bench = false

[[bin]]
name = "pushpin-legacy"
test = false
bench = false

[[bin]]
name = "pushpin"
test = false
bench = false

[[bin]]
name = "pushpin-publish"
test = false
bench = false
